# telegram-local

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  __main__.py
app/core/: config.py  log.py
app/handlers/: __init__.py  echo.py  start.py
examples/: example.env
nginx/: default.conf
